# hpc-work

./: .gitignore  README.md
cuda/: Makefile  README.md  collect_output  generate_charts.py  main.cu  out_stats.txt
cuda/data/: accuracy_stats.csv  ccc_stats.csv  copy_script  gs_stats.csv  lena_out.pgm  lena_out_11.pgm  lena_out_15.pgm  lena_out_3.pgm  lena_out_7.pgm  lena_sobel_y.pgm  lena_std_3.pgm  lt_stats.csv  open_script
cuda/sobel/: README.md  collect_output.sh  generate_charts.py  out_stats.txt  sobel_filter  sobel_filter.cu
homework0/: .gitignore  CMakeLists.txt  main.cpp
homework1/analyze/: hw1_analyze  p1.f.data  p1.m1.data  p1.time
homework1/src/: MatrixMultiply.cpp  hw1
homework2/: CMakeLists.txt  Homework 2 Analysis Report.docx  README.md  main.cpp
homework2/analyze/: analyze_2.sh  hw2_analyze  hw2_analyze.cpp  p1.f.data  p1.time  plot_hw2.gnu  plot_hw2.logx.gnu  plot_hw2.logxy.gnu  plot_hw2.logy.gnu  processesVsTime.csv
homework2/examples-used/: sem.make  semaphore_example.cpp  semaphore_example_spin.cpp  shm.make  shm_example.cpp
homework2/src/: hw2.cpp  main.cpp  main.hpp
homework3/: CMakeLists.txt
homework3/analyze/: Makefile  analyze_3.sh  homework3  hw3_analyze.cpp  index.html  p1.interleave.files.data  p1.interleave.threads.data  p1.time  plot_hw3.files.gnu  plot_hw3.files.logx.gnu  plot_hw3.files.logxy.gnu  plot_hw3.files.logy.gnu  plot_hw3.threads.gnu  plot_hw3.threads.logx.gnu  plot_hw3.threads.logxy.gnu  plot_hw3.threads.logy.gnu
homework3/src/: hw3.cpp  hw3.hpp  main.cpp  mosnickThread.cpp  mosnickThread.hpp
homework4/: Makefile  README.md  Timing.cpp  directory_scanner.cpp  directory_scanner.hpp  mpi_nearest_neighbor  mpi_nearest_neighbor.cpp  my_hosts  plot_columns.py  sample_search_vector.csv
homework4/homework3/: hw3.hpp  mosnickThread.hpp
scottgs_lib/: Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
scottgs_lib/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
scottgs_lib/doc/: Doxyfile  Makefile.in  header.html
scottgs_lib/src/: Makefile.am  Makefile.in
(+28 files in other folders)
